--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,27 +1,25 @@
 @use "vars" as *;
-// @use "global";
+@use "global";
 
+$nav-height: 7vh;
+$content-height: calc(100vh - #{$nav-height}); // CSS func, neat!
 /* -- Top level elements -- */
-// body {
-//   overflow-y: hidden;
-// }
+
 #layout {
-  // height: 95vh;
   overflow-y: hidden;
 }
-
 .header {
-  height: 40px;
+  height: $nav-height;
 
   .ant-menu {
-    line-height: 40px;
+    line-height: $nav-height;
   }
 }
 
-// #content-container {
-//   overflow-y: scroll;
-//   @include custom-scroll-bar();
-// }
+#content {
+  height: $content-height;
+  @include custom-scroll-bar();
+}
 
 /* -- Everythinng else -- */
 
@@ -30,8 +28,7 @@
   background-size: cover;
   background-position: center bottom;
   border-radius: 3px;
-  // height: 95vh;
-  width: 95vw;
+
   margin: 2vh 2vw;
   padding: 0px;
   display: flex;
@@ -44,13 +41,8 @@
 .ant-layout-content {
   display: flex;
   flex-flow: row wrap;
-  width: 100%;
-
-  // overflow-y: scroll;
-  // @include custom-scroll-bar();
 
   #body {
-    // background-color: $background-transp;
     background-color: rgba(126, 126, 126, 0.329);
     color: white;
 
@@ -89,6 +81,7 @@
 
 .ant-layout-sider {
   background-color: $gray;
+  height: $content-height;
 }
 
 .ant-layout-sider-children {
@@ -98,7 +91,6 @@
 #objectiveStmt {
   background-color: $gray;
   margin-bottom: 1em;
-  width: $width;
   max-width: fit-content;
 
   * {
